# pattern_recognition

./: .gitignore  README.md  pyproject.toml
multi_eeg_notebooks/: data_analisys.ipynb
notebooks/: bare_seed_edge_matrix.ipynb  captum_test.ipynb  multy_gpu_test.ipynb  p300B_edge_matrix.ipynb  p300B_gradient_matrix.ipynb  p300_EDA.ipynb  seed_edge_matrix.ipynb  seed_exp.ipynb  time_series_tests.ipynb  training_update.ipynb
notebooks/weights/: cnn_linear_sum.npy  gnn_linear_sum.npy
src/: data.py  graph.py  interpretation.py  losses.py  models.py  models_cnn.py  models_gnn.py  utils.py
